@@ -10,11 +10,14 @@ import net.minecraft.text.Text;
 import net.minecraft.util.Identifier;
 import org.minefortress.fortress.resources.client.FortressItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class FortressCraftingScreen extends HandledScreen<FortressCraftingScreenHandler> {
 
     private static final Identifier TEXTURE = new Identifier("textures/gui/container/crafting_table.png");
+    private boolean narrow;
+
+    private final FortressRecipeBookWidget recipeBook = new FortressRecipeBookWidget();
 
     public FortressCraftingScreen(FortressCraftingScreenHandler handler, PlayerInventory inventory, Text title) {
         super(handler, inventory, title);
@@ -23,17 +26,41 @@ public class FortressCraftingScreen extends HandledScreen<FortressCraftingScreen
     @Override
     protected void init() {
         super.init();
-        this.titleX = 29;
-        this.handler.setItems(Arrays.asList(
+        this.narrow = this.width < 379;
+
+        this.recipeBook.initialize(this.width, this.height, this.client, this.narrow, this.handler);
+        this.x = this.recipeBook.findLeftEdge(this.width, this.backgroundWidth);
+        this.addSelectableChild(this.recipeBook);
+        this.setInitialFocus(this.recipeBook);
+
+
+        this.handler.setItems(List.of(
                 new FortressItemStack(Items.DIRT, 32)
         ));
         this.handler.scrollItems(0f);
+
+        this.titleX = 29;
+    }
+
+    @Override
+    public void handledScreenTick() {
+        super.handledScreenTick();
+        this.recipeBook.update();
     }
 
     @Override
     public void render(MatrixStack matrices, int mouseX, int mouseY, float delta) {
         this.renderBackground(matrices);
-        super.render(matrices, mouseX, mouseY, delta);
+        if (this.recipeBook.isOpen() && this.narrow) {
+            this.drawBackground(matrices, delta, mouseX, mouseY);
+            this.recipeBook.render(matrices, mouseX, mouseY, delta);
+        } else {
+            this.recipeBook.render(matrices, mouseX, mouseY, delta);
+            super.render(matrices, mouseX, mouseY, delta);
+            this.recipeBook.drawGhostSlots(matrices, this.x, this.y, true, delta);
+        }
+        this.drawMouseoverTooltip(matrices, mouseX, mouseY);
+        this.recipeBook.drawTooltip(matrices, this.x, this.y, mouseX, mouseY);
     }
 
     @Override
@@ -44,5 +71,11 @@ public class FortressCraftingScreen extends HandledScreen<FortressCraftingScreen
         int i = this.x;
         int j = (this.height - this.backgroundHeight) / 2;
         this.drawTexture(matrices, i, j, 0, 0, this.backgroundWidth, this.backgroundHeight);
+    }
+
+    @Override
+    public void removed() {
+        this.recipeBook.close();
+        super.removed();
     }
 }
